chat name (again)

--- a/web/managers/chat.html
+++ b/web/managers/chat.html
@@ -65,11 +65,9 @@
                             <tr>
                                 <th style="width: 40px;"></th>
                                 <th style="width: 80px;">ID</th>
-                                <th style="width: 80px;">Type</th>
-                                <th style="width: 100px;">Role</th>
                                 <th style="width: 120px;">User</th>
                                 <th>Content</th>
-                                <th style="width: 150px;">DateTime</th>
+                                <th style="width: 150px;">Datetime</th>
                             </tr>
                         </thead>
                         <tbody id="messages-table-body">
