--- a/web/dashboard/dashboard.html
+++ b/web/dashboard/dashboard.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mibo Admin - Dashboard</title>
+    <title>Mibo Admin</title>
+    <p>Version: 1.0.0</p>
     <link rel="stylesheet" href="/static/web.css">
     <style>
         body {
