whyyyyyyyyyyyyyyyyyyyyyy is it caching

--- a/web/dashboard/dashboard.html
+++ b/web/dashboard/dashboard.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mibo Admin</title>
-    <p>Version: 1.0.0</p>
     <link rel="stylesheet" href="/static/web.css">
     <style>
         body {
@@ -116,7 +115,7 @@
     <div class="dashboard-container">
         <!-- Header -->
         <div class="header">
-            <h1>Mibo Admin Dashboard</h1>
+            <h1>Mibo Admin</h1>
             <div class="user-info">
                 <span id="username-display">Loading...</span>
                 <button class="logout-btn" onclick="logout()">Logout</button>
