--- a/web/managers/user.html
+++ b/web/managers/user.html
@@ -4,7 +4,7 @@
     
     <!-- User Selector -->
     <div class="form-group">
-        <label for="user-selector" class="form-label">Select User</label>
+        <!--<label for="user-selector" class="form-label">Select User</label>-->
         <select id="user-selector" class="form-control">
             <option value="">-- Select a user --</option>
         </select>
