--- a/web/managers/reference.html
+++ b/web/managers/reference.html
@@ -4,7 +4,7 @@
     
     <!-- Reference Type Selector -->
     <div class="form-group">
-        <label class="form-label">Reference Type</label>
+        <!--<label class="form-label">Reference Type</label>-->
         <div style="display: flex; gap: 1rem;">
             <button id="ref-type-assistants" class="btn btn-outline ref-type-btn">Assistants</button>
             <button id="ref-type-models" class="btn btn-outline ref-type-btn">Models</button>
@@ -31,13 +31,13 @@
             <div class="card-body">
                 <div class="form-group">
                     <label for="reference-data" class="form-label">Reference Data (JSON)</label>
-                    <textarea id="reference-data" class="form-control" rows="20" style="font-family: monospace; font-size: 0.9rem;"></textarea>
+                    <textarea id="reference-data" class="form-control" rows="20";"></textarea>
                 </div>
                 
                 <div style="display: flex; gap: 1rem;">
                     <button id="save-reference-btn" class="btn btn-primary">Save Changes</button>
-                    <button id="format-json-btn" class="btn btn-secondary">Format JSON</button>
-                    <button id="reload-references-btn" class="btn btn-secondary">Reload All</button>
+                    <button id="format-json-btn" class="btn btn-primary">Format JSON</button>
+                    <button id="reload-references-btn" class="btn btn-primary">Reload All</button>
                 </div>
             </div>
         </div>
