--- a/web/auth/login.html
+++ b/web/auth/login.html
@@ -111,12 +111,12 @@
             <form id="loginForm">
                 <div class="form-group">
                     <!--<label for="username">Username</label>-->
-                    <input type="text" id="username" name="username" required autocomplete="username", placeholder="Username"">
+                    <input type="text" id="username" name="username" required autocomplete="username" placeholder="Username">
                 </div>
                 
                 <div class="form-group">
                     <!--<label for="token">Token</label>-->
-                    <input type="token" id="token" name="token" required autocomplete="one-time-code" placeholder="Token">
+                    <input type="text" id="token" name="token" required autocomplete="one-time-code" placeholder="Token">
                 </div>
                 
                 <button type="submit" class="btn btn-primary login-btn" id="loginBtn">
