copilot suggestion pt. 1

--- a/web/managers/reference.html
+++ b/web/managers/reference.html
@@ -31,7 +31,7 @@
             <div class="card-body">
                 <div class="form-group">
                     <label for="reference-data" class="form-label">Reference Data (JSON)</label>
-                    <textarea id="reference-data" class="form-control" rows="20";"></textarea>
+                    <textarea id="reference-data" class="form-control" rows="20"></textarea>
                 </div>
                 
                 <div style="display: flex; gap: 1rem;">
